better organized files

--- a/browser/index.html
+++ b/browser/index.html
@@ -25,7 +25,7 @@
     <script src="js/app.js"></script>
     <script src="js/login/LoginCtrl.js"></script>
     <script src="js/signup/signupCtrl.js"></script>
-    <script src="js/tinderCards.js"></script>
+    <script src="js/tinderCards/tinderCards.js"></script>
 
   </head>
 
