--- a/browser/js/login/login.html
+++ b/browser/js/login/login.html
@@ -6,7 +6,7 @@
     </div>
   </ion-header-bar>
   <ion-content>
-    <form ng-submit="doLogin()">
+    <form>
       <div class="list">
 
         <label class="item item-input">
@@ -24,8 +24,9 @@
         <label class="item">
           <button class="button button-block button-positive" type="submit" ng-click="doLogin()">Log in</button>
         </label>
+        <button ng-click="loginFacebook()">Facebook Login</button>
       </div>
     </form>
-              <button class="button button-negative" type="submit" ng-click="$state.go(signup)">Sign Up</button>
+              <button class="button button-negative" type="submit" ng-click="showSignup()">Sign Up</button>
   </ion-content>
 </ion-modal-view>
