--- a/browser/index.html
+++ b/browser/index.html
@@ -19,19 +19,18 @@
     <!-- <script src="lib/ionic/js/ionic.bundle.js"></script> -->
 
     <!-- cordova script (this will be a 404 during development) -->
-    <!-- <script src="cordova.js"></script> -->
+<!--     // <script src="cordova.js"></script> -->
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/login/LoginCtrl.js"></script>
     <script src="js/signup/signupCtrl.js"></script>
     <script src="js/tinderCards/tinderCards.js"></script>
-
+    <script src="js/post/post.js"></script>
   </head>
 
-  <body ng-app="myApp" no-scroll>
-
+  <body ng-app="myApp" ng-controller="mainCtrl" no-scroll>
     <ion-nav-view></ion-nav-view>
-
   </body>
+
 </html>
