Minor updates to front-page

--- a/browser/index.html
+++ b/browser/index.html
@@ -26,11 +26,11 @@
     <script src="js/login/LoginCtrl.js"></script>
     <script src="js/signup/signupCtrl.js"></script>
     <script src="js/tinderCards/tinderCards.js"></script>
-
+    <script src="js/front-page/front-page.js"></script>
   </head>
 
   <body ng-app="myApp" no-scroll>
-
+    
     <ion-nav-view></ion-nav-view>
 
   </body>
