fixed post side menu

--- a/browser/js/common/directives/menu.html
+++ b/browser/js/common/directives/menu.html
@@ -22,7 +22,7 @@
           Login
         </ion-item>
 
-        <ion-item nav-clear menu-close ui-sref="post">
+        <ion-item nav-clear menu-close ui-sref="app.post">
           Post
         </ion-item>
 
