--- a/browser/index.html
+++ b/browser/index.html
@@ -18,16 +18,12 @@
     <!-- ionic/angularjs js -->
     <!-- <script src="lib/ionic/js/ionic.bundle.js"></script> -->
 
-    <!-- chat app -->
-    <link href="//code.ionicframework.com/nightly/css/ionic.css" rel="stylesheet">
-    <!-- <script src="//code.ionicframework.com/nightly/js/ionic.bundle.js"></script> -->
-
     <!-- cordova script (this will be a 404 during development) -->
 <!--     // <script src="cordova.js"></script> -->
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/login/LoginCtrl.js"></script>
+    <script src="js/login/MainCtrl.js"></script>
     <script src="js/signup/signupCtrl.js"></script>
     <script src="js/tinderCards/tinderCards.js"></script>
     <script src="js/post/post.js"></script>
@@ -36,7 +32,7 @@
     <script src="js/front-page/front-page.js"></script>
   </head>
 
-  <body ng-app="myApp" ng-controller="MainCtrl" no-scroll>
+  <body ng-app="myApp" no-scroll>
     <ion-nav-view></ion-nav-view>
   </body>
 
