--- a/browser/index.html
+++ b/browser/index.html
@@ -23,7 +23,7 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/login/MainCtrl.js"></script>
+    <script src="js/MainCtrl.js"></script>
     <script src="js/signup/signupCtrl.js"></script>
     <script src="js/tinderCards/tinderCards.js"></script>
     <script src="js/post/post.js"></script>
@@ -32,7 +32,7 @@
     <script src="js/front-page/front-page.js"></script>
   </head>
 
-  <body ng-app="myApp" no-scroll>
+  <body ng-app="myApp" ng-controller="MainCtrl" no-scroll>
     <ion-nav-view></ion-nav-view>
   </body>
 
