--- a/browser/js/common/directives/menu.html
+++ b/browser/js/common/directives/menu.html
@@ -18,8 +18,8 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item nav-clear menu-close ng-click="login()">
-          Login
+        <ion-item nav-clear menu-close ui-sref="app.swap">
+          Swap
         </ion-item>
 
         <ion-item nav-clear menu-close ui-sref="app.post">
