--- a/browser/js/matches/matches.html
+++ b/browser/js/matches/matches.html
@@ -10,17 +10,17 @@
       <div class="list">
 
           <a class="item item-thumbnail-left" ui-sref="chat">
-            <img src="cover.jpg">
+            <img src="">
             <h2>Pretty Hate Machine</h2>
             <p>Nine Inch Nails</p>
           </a>
           <a class="item item-thumbnail-left" href="#">
-            <img src="cover.jpg">
+            <img src="">
             <h2>Pretty Hate Machine</h2>
             <p>Nine Inch Nails</p>
           </a>
           <a class="item item-thumbnail-left" href="#">
-            <img src="cover.jpg">
+            <img src="">
             <h2>Pretty Hate Machine</h2>
             <p>Nine Inch Nails</p>
           </a>
