small progress on front-page

--- a/browser/js/tinderCards/tindercards.html
+++ b/browser/js/tinderCards/tindercards.html
@@ -1,3 +1,6 @@
+<!-- <ion-view ng-if="user.isAuthenticated">
+</ion-view> -->
+
 <ion-view view-title="FreeSwapCards" >
 
     <ion-pane ng-controller="CardsCtrl">
