--- a/browser/js/common/directives/front-page/front-page.html
+++ b/browser/js/common/directives/front-page/front-page.html
@@ -1,9 +1,6 @@
 <ion-view>
   <ion-header-bar>
-    <h1 class="title">Front Page</h1>
-    <div class="buttons">
-      <button class="button button-clear" ng-click="closeLogin()">Close</button>
-    </div>
+    <h1 class="title">Sign-In</h1>
   </ion-header-bar>
   <ion-content>
     <form>
