--- a/browser/index.html
+++ b/browser/index.html
@@ -28,6 +28,8 @@
     <script src="js/tinderCards/tinderCards.js"></script>
     <script src="js/post/post.js"></script>
     <script src="js/matches/MatchesCtrl.js"></script>
+    <script src="js/settings/SettingsCtrl.js"></script>
+    <script src="js/chat/ChatCtrl.js"></script>
     <script src="js/common/directives/menu/menu.js"></script>
     <script src="js/common/directives/front-page/front-page.js"></script>
   </head>
