--- a/browser/js/common/directives/menu/menu.html
+++ b/browser/js/common/directives/menu/menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-stable">
+    <ion-nav-bar class="bar-positive">
       <ion-nav-back-button>
       </ion-nav-back-button>
 
@@ -8,12 +8,15 @@
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
         </button>
       </ion-nav-buttons>
+      <ion-nav-buttons side="right" >
+        <button menu-toggle="right" class="button button-icon icon ion-chatboxes" ui-sref="app.chat"></button>
+      </ion-nav-buttons>
     </ion-nav-bar>
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-    <ion-header-bar class="bar-stable">
+    <ion-header-bar class="bar-positive">
       <h1 class="title">FreeSwap</h1>
     </ion-header-bar>
     <ion-content>
@@ -29,8 +32,17 @@
         <ion-item nav-clear menu-close ui-sref="front-page">
           Front Page
         </ion-item>
+
         <ion-item nav-clear menu-close ui-sref="app.matches">
           Matches
+        </ion-item>
+
+        <ion-item nav-clear menu-close ui-sref="app.settings">
+          Settings
+        </ion-item>
+
+        <ion-item nav-clear menu-close ui-sref="app.chat">
+          Chat
         </ion-item>
 
       </ion-list>
