--- a/browser/js/common/directives/menu/menu.html
+++ b/browser/js/common/directives/menu/menu.html
@@ -41,9 +41,9 @@
           Settings
         </ion-item>
 
-        <ion-item nav-clear menu-close ui-sref="app.chat">
+<!--         <ion-item nav-clear menu-close ui-sref="app.chat">
           Chat
-        </ion-item>
+        </ion-item> -->
 
       </ion-list>
     </ion-content>
