--- a/browser/js/matches/matches.html
+++ b/browser/js/matches/matches.html
@@ -8,17 +8,17 @@
 <br>
       <div class="list">
 
-          <a class="item item-thumbnail-left" ui-sref="chat">
+          <a class="item item-thumbnail-left" ui-sref="app.chat">
             <img src="">
             <h2>Pretty Hate Machine</h2>
             <p>Nine Inch Nails</p>
           </a>
-          <a class="item item-thumbnail-left" href="#">
+          <a class="item item-thumbnail-left" ui-sref="app.chat">
             <img src="">
             <h2>Pretty Hate Machine</h2>
             <p>Nine Inch Nails</p>
           </a>
-          <a class="item item-thumbnail-left" href="#">
+          <a class="item item-thumbnail-left" ui-sref="app.chat">
             <img src="">
             <h2>Pretty Hate Machine</h2>
             <p>Nine Inch Nails</p>
