--- a/browser/js/chat/chat.html
+++ b/browser/js/chat/chat.html
@@ -4,8 +4,7 @@
       </ion-header-bar>
 <br>
 <br>
-
-    <ion-content>
+<!--     <ion-content>
         <ion-list ng-show="roomName">
             <ion-item class="item item-input-inset">
                 <label class="item-input-wrapper">
@@ -37,7 +36,12 @@
             </ion-item>
         </ion-list>
 
-    </ion-content>
+    </ion-content> -->
+
+<div class="bar bar-footer">
+    <input type="text" placeholder="Enter Message">
+    <button class="button">   Send   </button>
+</div>
 
 </ion-view>
 
