--- a/browser/js/common/directives/menu/menu.html
+++ b/browser/js/common/directives/menu/menu.html
@@ -37,6 +37,10 @@
           Settings
         </ion-item>
 
+        <ion-item nav-clear menu-close ui-sref="front-page">
+          Front Page - For Development Purposes
+        </ion-item>
+
 <!--         <ion-item nav-clear menu-close ui-sref="app.chat">
           Chat
         </ion-item> -->
