login and signup works, working on facebook OAUTH, and prettifying

--- a/browser/js/front-page/front-page.html
+++ b/browser/js/front-page/front-page.html
@@ -19,7 +19,7 @@
 
 
         <label class="item">
-          <button class="button button-block button-positive" type="submit" ng-click="doLogin()">Log in</button>
+          <button class="button button-block button-positive" ng-click="login(user)">Log in</button>
         </label>
         <button ng-click="loginFacebook()">Facebook Login</button>
       </div>
