--- a/browser/js/settings/settings.html
+++ b/browser/js/settings/settings.html
@@ -14,7 +14,7 @@
       </a> -->
 
       <a class="item item-icon-left" ng-click="logout()">
-        <i class="icon ion-close-circled"></i>
+        <i class="icon ion-close-circled" ng-click="logout()"></i>
         Logout
       </a>
 
