--- a/browser/index.html
+++ b/browser/index.html
@@ -9,14 +9,14 @@
     <link href="css/style.css" rel="stylesheet">
 
     <!-- Tinder Cards -->
-    <link rel="stylesheet" href="http://code.ionicframework.com/contrib/ionic-contrib-tinder-cards/ionic.tdcards.css">
+    <!-- <link rel="stylesheet" href="http://code.ionicframework.com/contrib/ionic-contrib-tinder-cards/ionic.tdcards.css">
     <link href="//code.ionicframework.com/1.0.0-beta.14/css/ionic.css" rel="stylesheet">
     <script src="http://code.ionicframework.com/collide/0.0.4/collide.js"></script>
     <script src="//code.ionicframework.com/1.0.0-beta.14/js/ionic.bundle.js"></script>
-    <script src="http://code.ionicframework.com/contrib/ionic-contrib-tinder-cards/ionic.tdcards.js"></script>
+    <script src="http://code.ionicframework.com/contrib/ionic-contrib-tinder-cards/ionic.tdcards.js"></script> -->
 
     <!-- ionic/angularjs js -->
-    <!-- <script src="lib/ionic/js/ionic.bundle.js"></script> -->
+    <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
 <!--     // <script src="cordova.js"></script> -->
@@ -36,6 +36,8 @@
     <script src="js/common/factories/chatFactory.js"></script>
     <script src="js/common/factories/RoomsFactory.js"></script>
     <script src="js/common/factories/AddUserFactory.js"></script>
+    <script src="js/tinderCards/tdCards.js"></script>
+    <script src="js/tinderCards/collide.js"></script>
 
     <!-- firebase & angularfire libraries -->
     <script src="https://cdn.firebase.com/js/client/2.2.3/firebase.js"></script>
