--- a/browser/js/front-page/front-page.html
+++ b/browser/js/front-page/front-page.html
@@ -7,8 +7,8 @@
       <div class="list">
 
         <label class="item item-input">
-          <span class="input-label">Email</span>
-          <input type="text" ng-model="user.email">
+          <span class="input-label">Username</span>
+          <input type="text" ng-model="user.username">
         </label>
 
 
