--- a/browser/index.html
+++ b/browser/index.html
@@ -9,11 +9,11 @@
     <link href="css/style.css" rel="stylesheet">
 
     <!-- Tinder Cards -->
-<!--     <link rel="stylesheet" href="http://code.ionicframework.com/contrib/ionic-contrib-tinder-cards/ionic.tdcards.css">
+    <!-- <link rel="stylesheet" href="http://code.ionicframework.com/contrib/ionic-contrib-tinder-cards/ionic.tdcards.css">
     <link href="//code.ionicframework.com/1.0.0-beta.14/css/ionic.css" rel="stylesheet">
     <script src="http://code.ionicframework.com/collide/0.0.4/collide.js"></script>
-    <script src="//code.ionicframework.com/1.0.0-beta.14/js/ionic.bundle.js"></script> -->
-    <script src="http://code.ionicframework.com/contrib/ionic-contrib-tinder-cards/ionic.tdcards.js"></script>
+    <script src="//code.ionicframework.com/1.0.0-beta.14/js/ionic.bundle.js"></script>
+    <script src="http://code.ionicframework.com/contrib/ionic-contrib-tinder-cards/ionic.tdcards.js"></script> -->
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
