fixed lower case letters

--- a/browser/index.html
+++ b/browser/index.html
@@ -31,12 +31,12 @@
     <script src="js/post/post.js"></script>
     <script src="js/matches/MatchesCtrl.js"></script>
     <script src="js/settings/SettingsCtrl.js"></script>
-    <script src="js/chat/ChatCtrl.js"></script>
+    <script src="js/chat/chatCtrl.js"></script>
     <script src="js/common/directives/menu/menu.js"></script>
     <script src="js/common/factories/chatFactory.js"></script>
     <script src="js/common/factories/RoomsFactory.js"></script>
     <script src="js/common/factories/AddUserFactory.js"></script>
-    <script src="js/tinderCards/tdCards.js"></script>
+    <script src="js/tinderCards/tdcards.js"></script>
     <script src="js/tinderCards/collide.js"></script>
 
     <!-- firebase & angularfire libraries -->
