--- a/browser/index.html
+++ b/browser/index.html
@@ -34,8 +34,8 @@
     <script src="js/chat/chat.js"></script>
     <script src="js/common/directives/menu/menu.js"></script>
     <script src="js/common/factories/chatFactory.js"></script>
-    <script src="js/common/factories/RoomsFactory.js"></script>
-    <script src="js/common/factories/AddUserFactory.js"></script>
+<!--     <script src="js/common/factories/RoomsFactory.js"></script>
+    <script src="js/common/factories/AddUserFactory.js"></script> -->
     <script src="js/tindercards/tdcards.js"></script>
     <script src="js/tindercards/collide.js"></script>
 
