--- a/browser/index.html
+++ b/browser/index.html
@@ -27,7 +27,7 @@
     <script src="js/main.js"></script>
     <script src="/js/front-page/front-page.js"></script>
     <script src="js/signup/signup.js"></script>
-    <script src="js/tindercards/tindercards.js"></script>
+    <script src="js/tinderCards/tinderCards.js"></script>
     <script src="js/post/post.js"></script>
     <script src="js/matches/matches.js"></script>
     <script src="js/settings/settings.js"></script>
@@ -36,8 +36,8 @@
     <script src="js/common/factories/chatFactory.js"></script>
 <!--     <script src="js/common/factories/RoomsFactory.js"></script>
     <script src="js/common/factories/AddUserFactory.js"></script> -->
-    <script src="js/tindercards/tdcards.js"></script>
-    <script src="js/tindercards/collide.js"></script>
+    <script src="js/tinderCards/tdcards.js"></script>
+    <script src="js/tinderCards/collide.js"></script>
 
     <!-- firebase & angularfire libraries -->
     <script src="https://cdn.firebase.com/js/client/2.2.3/firebase.js"></script>
