fixed file arrangement after zeke suggestions

--- a/browser/index.html
+++ b/browser/index.html
@@ -34,10 +34,8 @@
     <script src="js/chat/chat.js"></script>
     <script src="js/common/directives/menu/menu.js"></script>
     <script src="js/common/factories/chatFactory.js"></script>
-<!--     <script src="js/common/factories/RoomsFactory.js"></script>
-    <script src="js/common/factories/AddUserFactory.js"></script> -->
-    <script src="js/tinderCards/tdcards.js"></script>
-    <script src="js/tinderCards/collide.js"></script>
+    <script src="lib/tdcards/tdcards.js"></script>
+    <script src="lib/tdcards/collide.js"></script>
 
     <!-- firebase & angularfire libraries -->
     <script src="https://cdn.firebase.com/js/client/2.2.3/firebase.js"></script>
