--- a/browser/index.html
+++ b/browser/index.html
@@ -34,9 +34,10 @@
     <script src="js/chat/chat.js"></script>
     <script src="js/common/directives/menu/menu.js"></script>
     <script src="js/common/factories/chatFactory.js"></script>
+    <script src="js/common/factories/swipeFactory.js"></script>
+    <script src="js/common/factories/userFactory.js"></script>
     <script src="lib/tdcards/tdcards.js"></script>
     <script src="lib/tdcards/collide.js"></script>
-
     <!-- firebase & angularfire libraries -->
     <script src="https://cdn.firebase.com/js/client/2.2.3/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/1.0.0/angularfire.min.js"></script>
