--- a/www/js/chat/chat.html
+++ b/www/js/chat/chat.html
@@ -5,10 +5,10 @@
 <br>
 <br>
     <ul class="chatbox">
-        <div class="chat-bubble left">
+        <!-- <div class="chat-bubble left"> -->
             <li ng-repeat="message in messages">{{ message.from }}: {{ message.content }}</li>
-        </div>
-<!--         <div class="chat-bubble right">
+<!--         </div>
+        <div class="chat-bubble right">
             <li ng-repeat="message in messages">{{ message.from }}: {{ message.content }}</li>
         </div> -->
 
