--- a/browser/js/tinderCards/tindercards.html
+++ b/browser/js/tinderCards/tindercards.html
@@ -6,6 +6,7 @@
       </ion-header-bar>
 
       <td-cards>
+        {{ cardfromDb }}
         <td-card ng-repeat="card in cards" on-destroy="cardDestroyed($index)" on-swipe-left="cardSwipedLeft($index)" on-swipe-right="cardSwipedRight($index)" on-partial-swipe="cardPartialSwipe(amt)" class="card-{{$index}}">
           <div class="image">
             <div class="no-text">NOPE</div>
