working on platformfactory

--- a/www/index.html
+++ b/www/index.html
@@ -39,6 +39,7 @@
     <script src="js/common/factories/swipeFactory.js"></script>
     <script src="js/common/factories/userFactory.js"></script>
     <script src="js/common/factories/productFactory.js"></script>
+    <script src="js/common/factories/platformFactory.js"></script>
     <script src="lib/tdcards/tdcards.js"></script>
     <script src="lib/tdcards/collide.js"></script>
     <!-- firebase & angularfire libraries -->
