--- a/browser/js/front-page/front-page.html
+++ b/browser/js/front-page/front-page.html
@@ -21,7 +21,7 @@
         <label class="item">
           <button class="button button-block button-positive" ng-click="login(user)">Log in</button>
         </label>
-        <button ng-click="loginFacebook()">Facebook Login</button>
+        <button ng-click="loginPlatform('facebook')">Facebook Login</button>
       </div>
     </form>
 
