--- a/www/js/front-page/front-page.html
+++ b/www/js/front-page/front-page.html
@@ -1,7 +1,9 @@
-<ion-view>
+<ion-nav-view>
   <ion-header-bar>
     <h1 class="title">Sign-In</h1>
   </ion-header-bar>
+  <ion-nav-bar class="bar-positive">
+  </ion-nav-bar>
   <ion-content>
     <form>
       <div class="list">
@@ -25,24 +27,6 @@
       </div>
     </form>
 
-    <h1>Sign Up</h1>
-
-    <form show-validation novalidate>
-      <label class="item item-input">
-        <span class="input-label">Username<span>
-        <input type="text" ng-model="newUser.username" required>
-      </label>
-      <label class="item item-input">
-        <span class="input-label">Email<span>
-        <input type="text" ng-model="newUser.email" required>
-      </label>
-      <label class="item item-input">
-        <span class="input-label">Password<span>
-        <input type="text" ng-model="newUser.password" required>
-      </label>
-      <label class="item">
-        <button class="button button-block button-positive" ng-click="signUp(newUser)">Sign Up</button>
-      </label>
-    </form>
+    <button ng-click="goTo('sign-up')">Sign Up</button>
   </ion-content>
-</ion-view>
+</ion-nav-view>
