--- a/browser/js/tinderCards/tindercards.html
+++ b/browser/js/tinderCards/tindercards.html
@@ -6,20 +6,10 @@
       </ion-header-bar>
 
       <td-cards>
-    
-  <br><br><br>
-     <!--  {{ cardUrl }} -->
         <td-card ng-repeat="card in cards" on-destroy="cardDestroyed($index)" on-swipe-left="cardSwipedLeft($index)" on-swipe-right="cardSwipedRight($index)" on-partial-swipe="cardPartialSwipe(amt)" class="card-{{$index}}">
           <div class="image">
             <div class="no-text">NOPE</div>
-
-            <div class="title">{{card.title}} <div>
-
-            <img class="url" ng-src="{{card.photoUrls}}">
-
-            <br><br>
-            <div class="description">{{card.description}} </div>
-
+            <img ng-src="{{card.image}}">
             <div class="yes-text">LIKE</div>
           </div>
         </td-card>
