--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,6 @@
     <!-- your app's js -->
 
     <script src="js/app.js"></script>
-    <!-- <script src="js/fsa-pre-built.js"></script> -->
     <script src="js/main.js"></script>
     <script src="js/signup/signup.js"></script>
     <script src="js/tinderCards/tindercards.js"></script>
@@ -35,11 +34,13 @@
     <script src="js/chat/chat.js"></script>
     <script src="js/common/directives/menu/menu.js"></script>
     <script src="js/front-page/front-page.js"></script>
+    <!-- Factories -->
     <script src="js/common/factories/chatFactory.js"></script>
     <script src="js/common/factories/swipeFactory.js"></script>
     <script src="js/common/factories/userFactory.js"></script>
     <script src="js/common/factories/productFactory.js"></script>
     <script src="js/common/factories/platformFactory.js"></script>
+    <!-- Public Libraries -->
     <script src="lib/tdcards/tdcards.js"></script>
     <script src="lib/tdcards/collide.js"></script>
     <!-- firebase & angularfire libraries -->
