fixed swiping with right id's and added history page and view page (though view isnt working and history only shows ids)

--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <!-- Tinder Cards -->
     <!-- <link rel="stylesheet" href="http://code.ionicframework.com/contrib/ionic-contrib-tinder-cards/ionic.tdcards.css">
     <link href="//code.ionicframework.com/1.0.0-beta.14/css/ionic.css" rel="stylesheet">
@@ -35,6 +35,8 @@
     <script src="js/chat/chat.js"></script>
     <script src="js/common/directives/menu/menu.js"></script>
     <script src="js/front-page/front-page.js"></script>
+    <script src="js/history/history.js"></script>
+    <script src="js/view/view.js"></script>
     <script src="js/common/factories/chatFactory.js"></script>
     <script src="js/common/factories/swipeFactory.js"></script>
     <script src="js/common/factories/userFactory.js"></script>
