--- a/www/js/common/directives/menu/menu.html
+++ b/www/js/common/directives/menu/menu.html
@@ -33,6 +33,10 @@
           Matches
         </ion-item>
 
+        <ion-item nav-clear menu-close ui-sref="app.history">
+          History
+        </ion-item>
+
         <ion-item nav-clear menu-close ui-sref="app.settings">
           Settings
         </ion-item>
