--- a/www/js/matches/matches.html
+++ b/www/js/matches/matches.html
@@ -6,6 +6,7 @@
       </ion-header-bar>
 <br>
 <br>
+  <ion-scroll>
       <div class="list">
 
           <a class="item item-thumbnail-left" ui-sref="app.chat">
@@ -25,5 +26,5 @@
           </a>
 
       </div>
-
+  </ion-scroll>
 </ion-view>
