--- a/platforms/android/assets/www/js/tinderCards/tindercards.html
+++ b/platforms/android/assets/www/js/tinderCards/tindercards.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Swap" >
 
-    <ion-pane ng-controller="CardsCtrl">
+    <ion-pane>
       <ion-header-bar class="bar-default">
         <h1 class="title">Swap</h1>
       </ion-header-bar>
