Scrapes now include product URL, added resolved user to fix login/signup states to app/swap

--- a/www/js/tinderCards/tindercards.html
+++ b/www/js/tinderCards/tindercards.html
@@ -19,8 +19,8 @@
             </div>
             <div class="yes-text">LIKE</div>
             <span>
-            <i class="fa fa-times fa-5x" style= "color: red" ng-click="cardSwipedLeft($index)"></i>
-            <i class="fa fa-check fa-5x" style= "color: green" ng-click="cardSwipedRight($index)"></i>
+            <i class="fa fa-times fa-5x" style= "color: red" ng-click="cardSwipedLeft()"></i>
+            <i class="fa fa-check fa-5x" style= "color: green" ng-click="cardSwipedRight()"></i>
             </span>
           </div>
 
