--- a/www/js/tinderCards/tindercards.html
+++ b/www/js/tinderCards/tindercards.html
@@ -8,12 +8,12 @@
       <td-cards>
 
     <!--  took out  class="card-{{$index}}"  -->
-        <td-card ng-repeat="card in cards" on-swipe-left="cardSwipedLeft($index)" on-swipe-right="cardSwipedRight($index)" on-partial-swipe="cardPartialSwipe(amt)" class="card-{{$index}}">
+        <td-card ng-repeat="card in cards" on-swipe-left="cardSwipedLeft($index)" on-swipe-right="cardSwipedRight($index)" class="card-{{$index}}">
           <div class="image">
             <div class="no-text">NOPE</div>
             <br>
-            <div ng-click="view()">
-              <img class="url" ng-src="{{card.photoUrls}}">
+            <div>
+              <img class="url" ng-src="{{card.photoUrls}}" ng-click="view()">
               <div class="title" style="font-weight: bolder; font-size: 18px; text-align: center">{{card.title}} <div>
               <!-- <div class="description">{{card.description}} </div> -->
             </div>
