working file upload

--- a/www/index.html
+++ b/www/index.html
@@ -53,6 +53,7 @@
 
   <body ng-app="myApp" ng-controller="MainCtrl" no-scroll>
     <ion-nav-view></ion-nav-view>
+    <script type="text/javascript" src="//api.filepicker.io/v1/filepicker.js"></script>
   </body>
 
 </html>
