added geolocation functionality

--- a/www/js/front-page/front-page.html
+++ b/www/js/front-page/front-page.html
@@ -23,10 +23,10 @@
         <label class="item">
           <button class="button button-block button-positive" ng-click="login(user)">Log in</button>
         </label>
-        <button ng-click="loginFacebook()">Facebook Login</button>
+        <!-- <button ng-click="loginFacebook()">Facebook Login</button> -->
       </div>
     </form>
 
-    <button ng-click="goTo('sign-up')">Sign Up</button>
+    <button class="button button-block button-positive" ng-click="goTo('sign-up')">Sign Up</button>
   </ion-content>
 </ion-nav-view>
