--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,7 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
+  <!--   // <script src="cordova.js"></script> -->
     <script src="bower_components/ngCordova/dist/ng-cordova.js"></script>
 
     <!-- your app's js -->
@@ -42,6 +42,7 @@
     <script src="js/common/factories/userFactory.js"></script>
     <script src="js/common/factories/productFactory.js"></script>
     <script src="js/common/factories/platformFactory.js"></script>
+    <script src="js/common/factories/matchFactory.js"></script>
     <!-- Public Libraries -->
     <script src="lib/tdcards/tdcards.js"></script>
     <script src="lib/tdcards/collide.js"></script>
