--- a/www/js/history/history.html
+++ b/www/js/history/history.html
@@ -1,29 +1,20 @@
-<ion-view view-title="History" >
+<ion-view view-title="Your History" >
 
       <ion-header-bar class="bar-default">
-        <h1 class="title">History</h1>
+        <h1 class="title">Your History</h1>
 
       </ion-header-bar>
 <br>
 <br>
 
 <ion-scroll>
-  <ion-list>
-    <ion-item ng-repeat="item in history" class="item-thumbnail-left">
-      <h2>{{item}}</h2>
-
-      <img ng-src="{{item.img}}">
+<div class="list">
+  <ion-item ng-repeat="item in history.likes" class="item-thumbnail-left">
+      <img src="{{item.photoUrls}}">
       <h2>{{item.title}}</h2>
       <p>{{item.description}}</p>
-      <ion-delete-button class="ion-minus-circled"
-                         ng-click="items.splice($index, 1)">
-      </ion-delete-button>
-      <ion-reorder-button class="ion-navicon"
-                          on-reorder="reorderItem(item, $fromIndex, $toIndex)">
-      </ion-reorder-button>
-
-    </ion-item>
-  </ion-list>
+  </ion-item>
+</div>
 </ion-scroll>
 
 <!-- <ion-list show-delete="shouldShowDelete" show-reorder="shouldShowReorder" can-swipe="listCanSwipe">
