--- a/www/js/matches/matches.html
+++ b/www/js/matches/matches.html
@@ -6,31 +6,19 @@
       </ion-header-bar>
 <br>
 <br>
-  <ion-scroll>
+  <ion-content>
       <div class="list">
 
-          <ion-item ng-repeat="match in matches">
-          {{ match }}
-          </ion-item>
-<!-- 
+        <ion-item ng-repeat="item in matches" class="item-thumbnail-left">
+          <img src="{{item.photoUrls}}">
+          <h2>{{item.product.title}}</h2>
+          <p>{{item.product.location}}</p>
+          <p> By {{item.seller.username}}</p>
 
-          <a class="item item-thumbnail-left" ui-sref="app.chat">
-            <img src="">
-            <h2>Pretty Hate Machine</h2>
-            <p>Nine Inch Nails</p>
-          </a>
-          <a class="item item-thumbnail-left" ui-sref="app.chat">
-            <img src="">
-            <h2>Pretty Hate Machine</h2>
-            <p>Nine Inch Nails</p>
-          </a>
-          <a class="item item-thumbnail-left" ui-sref="app.chat">
-            <img src="">
-            <h2>Pretty Hate Machine</h2>
-            <p>Nine Inch Nails</p>
-          </a>
- -->
+          <button class="More" ng-model="item.product._id" ng-click="detail(item.product._id)">More Info</button>
+          <button class="delete" ng-model="item.buyer._id" ng-click="delete(item.product._id, item.buyer._id)">Delete</button>
+        </ion-item>
  
       </div>
-  </ion-scroll>
+  </ion-content>
 </ion-view>
