--- a/www/js/matches/matchforseller.html
+++ b/www/js/matches/matchforseller.html
@@ -2,7 +2,7 @@
 <ion-view view-title="Matches" >
 
       <ion-header-bar class="bar-default">
-        <h1 class="title">Matches as a buyer</h1>
+        <h1 class="title">Matches as a seller</h1>
         <style>
           .red {
             color: red;
