--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,7 @@
     <script src="js/tinderCards/tindercards.js"></script>
     <script src="js/post/post.js"></script>
     <script src="js/matches/matches.js"></script>
+    <script src="js/matches/matchforseller.js"></script>
     <script src="js/settings/settings.js"></script>
     <script src="js/chat/chat.js"></script>
     <script src="js/common/directives/menu/menu.js"></script>
