seller match works

--- a/www/js/matches/matchforseller.html
+++ b/www/js/matches/matchforseller.html
@@ -14,9 +14,9 @@
       </ion-header-bar>
 
   <ion-content>
-  <br>
+<!--   <br>
 <br><br>
-  {{ userInfo }}
+  {{ userInfo }} -->
       <div class="list">
 
         <ion-item ng-repeat="item in matches" class="item-thumbnail-left" ng-class="{
@@ -36,7 +36,7 @@
  
       </div>
 
-
+      <br><br><br>
       <div class="tabs">
         <a class="tab-item" ui-sref="app.matches">
           As a buyer
