--- a/www/js/matches/matches.html
+++ b/www/js/matches/matches.html
@@ -14,9 +14,9 @@
       </ion-header-bar>
 
   <ion-content>
-  <br>
-<br><br>
-  {{ userInfo }}
+<!--   <br>
+<br><br> -->
+<!--   {{ userInfo }} -->
       <div class="list">
 
         <ion-item ng-repeat="item in matches" class="item-thumbnail-left" ng-class="{
@@ -28,14 +28,7 @@
           <p> By {{item.seller.username}}</p>
 
           <button class="More" ng-model="item.product._id" ng-click="detail(item.product._id)">More Info</button>
-          <button class="delete" ng-model="item.buyer._id" ng-click="delete(item.product._id, item.buyer._id)">Delete</button>
-
-     <!--      // for sellers page only -->
-          <button class="traded" ng-click="traded(item.product._id, item.buyer._id)">Traded</button>
-        </ion-item>
- 
       </div>
-
 
       <div class="tabs">
         <a class="tab-item" ui-sref="app.matches">
