--- a/www/js/matches/matchforseller.html
+++ b/www/js/matches/matchforseller.html
@@ -25,7 +25,7 @@
           <img src="{{item.product.photoUrls}}">
           <h2>{{item.product.title}}</h2>
           <p>{{item.product.location}}</p>
-          <p> By {{item.seller.username}}</p>
+          <p> Liked By {{item.seller.username}}</p>
 
           <button class="More" ng-model="item.product._id" ng-click="detail(item.product._id)">More Info</button>
           <button class="delete" ng-model="item.buyer._id" ng-click="delete(item.product._id, item.buyer._id)">Delete</button>
