--- a/www/js/common/directives/menu/menu.html
+++ b/www/js/common/directives/menu/menu.html
@@ -9,7 +9,7 @@
         </button>
       </ion-nav-buttons>
       <ion-nav-buttons side="right" >
-        <button menu-toggle="right" class="button button-icon icon ion-chatboxes" ui-sref="app.matches"></button>
+        <button menu-toggle="right" class="button button-icon icon ion-chatboxes" ui-sref="app.chat"></button>
       </ion-nav-buttons>
     </ion-nav-bar>
     <ion-nav-view name="menuContent"></ion-nav-view>
