--- a/www/js/common/directives/menu/menu.html
+++ b/www/js/common/directives/menu/menu.html
@@ -8,9 +8,9 @@
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
         </button>
       </ion-nav-buttons>
-      <ion-nav-buttons side="right" >
+<!--       <ion-nav-buttons side="right" >
         <button menu-toggle="right" class="button button-icon icon ion-chatboxes" ui-sref="app.chat"></button>
-      </ion-nav-buttons>
+      </ion-nav-buttons> -->
     </ion-nav-bar>
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
