--- a/www/index.html
+++ b/www/index.html
@@ -8,13 +8,8 @@
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <!-- Tinder Cards -->
-    <!-- <link rel="stylesheet" href="http://code.ionicframework.com/contrib/ionic-contrib-tinder-cards/ionic.tdcards.css">
-    <link href="//code.ionicframework.com/1.0.0-beta.14/css/ionic.css" rel="stylesheet">
-    <script src="http://code.ionicframework.com/collide/0.0.4/collide.js"></script>
-    <script src="//code.ionicframework.com/1.0.0-beta.14/js/ionic.bundle.js"></script>
-    <script src="http://code.ionicframework.com/contrib/ionic-contrib-tinder-cards/ionic.tdcards.js"></script> -->
 
+    <link href='http://fonts.googleapis.com/css?family=Rancho' rel='stylesheet' type='text/css'>
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
