--- a/www/js/common/directives/menu/menu.html
+++ b/www/js/common/directives/menu/menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content drag-content="false">
-    <ion-nav-bar class="bar-positive">
+    <ion-nav-bar class="bar-dark">
       <ion-nav-back-button>
       </ion-nav-back-button>
 
@@ -16,29 +16,29 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-    <ion-header-bar class="bar-positive">
-      <h1 class="title">FreeSwap</h1>
+    <ion-header-bar class="bar-dark">
+      <h1 class="title" ></h1>
     </ion-header-bar>
     <ion-content>
       <ion-list>
         <ion-item nav-clear menu-close ui-sref="app.swap">
-          Swap
+          Swap<i class="fa fa-gift" style="float:right;"></i>
         </ion-item>
 
         <ion-item nav-clear menu-close ui-sref="app.post">
-          Post
+          Post<i class="fa fa-camera" style="float:right;"></i>
         </ion-item>
 
         <ion-item nav-clear menu-close ui-sref="app.matches">
-          Matches
+          Matches<i class="fa fa-group" style="float:right;"></i>
         </ion-item>
 
         <ion-item nav-clear menu-close ui-sref="app.history">
-          History
+          History<i class="fa fa-bookmark" style="float:right;"></i>
         </ion-item>
 
         <ion-item nav-clear menu-close ui-sref="app.settings">
-          Settings
+          Settings<i class="fa fa-cogs" style="float:right;"></i>
         </ion-item>
 
         <ion-item nav-clear menu-close ui-sref="front-page">
