--- a/www/js/matches/matches.html
+++ b/www/js/matches/matches.html
@@ -5,10 +5,10 @@
         <h1 class="title">Matches as a buyer</h1>
         <style>
           .red {
-            background-color: red;
+            background-color: #ff7f7f;
           }
           .green {
-            background-color: green;
+            background-color: #76e176;
           }
         </style>
       </ion-header-bar>
