--- a/www/js/matches/matchforseller.html
+++ b/www/js/matches/matchforseller.html
@@ -5,10 +5,10 @@
         <h1 class="title">Matches as a seller</h1>
         <style>
           .red {
-            color: red;
+            color: #ff7f7f;
           }
           .green {
-            color: green;
+            color: #76e176;
           }
         </style>
       </ion-header-bar>
@@ -33,7 +33,7 @@
      <!--      // for sellers page only -->
           <button class="traded" ng-click="traded(item.product._id, item.buyer._id)">Traded</button>
         </ion-item>
- 
+
       </div>
 
       <br><br><br>
