--- a/www/js/common/directives/menu/menu.html
+++ b/www/js/common/directives/menu/menu.html
@@ -17,7 +17,7 @@
 
   <ion-side-menu side="left">
     <ion-header-bar class="bar-dark">
-      <h1 class="title" ></h1>
+      <h1 class="title" >Free Swap</h1>
     </ion-header-bar>
     <ion-content>
       <ion-list>
@@ -42,7 +42,7 @@
         </ion-item>
 
         <ion-item nav-clear menu-close ui-sref="front-page">
-          Front Page - For Development Purposes
+          Login
         </ion-item>
 
 <!--         <ion-item nav-clear menu-close ui-sref="app.chat">
