--- a/www/js/tinderCards/tindercards.html
+++ b/www/js/tinderCards/tindercards.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Swap">
   <ion-header-bar class="bar-default">
-    <h1 class="title">Swap</h1>
+    <h1 class="title"></h1>
   </ion-header-bar>
   <td-cards>
     <!--  took out  class="card-{{$index}}"  -->
@@ -24,6 +24,8 @@
     </div>
     <span>
   </td-cards>
+  <br>
+  <br>
   <br>
   <br>
   <div class="tinderButtons">
