--- a/www/js/tinderCards/tindercards.html
+++ b/www/js/tinderCards/tindercards.html
@@ -9,7 +9,7 @@
         <div class="no-text">NOPE</div>
         <br>
         <div>
-          <img class="url" ng-src="{{card.photoUrls}}" ui-sref="app.product-detail({_id: card._id})">
+          <img class="url" ng-src="{{card.photoUrls}}" ng-click="openModal()">
           <div class="title" style="font-weight: bolder; font-size: 18px; text-align: center">{{card.title}}
             <div>
               <!-- <div class="description">{{card.description}} </div> -->
@@ -26,3 +26,4 @@
   </td-cards>
   <ion-spinner icon="ripple" ng-show="cards.length == 0"></ion-spinner>
 </ion-view>
+<!-- ui-sref="app.product-detail({_id: card._id})" -->
