Fixed authentication to front-page. Working on front-page

--- a/www/js/tinderCards/tindercards.html
+++ b/www/js/tinderCards/tindercards.html
@@ -37,6 +37,6 @@
       </button>
     </span>
   </div>
-  <ion-spinner icon="ripple" ng-show="cards.length == 0"></ion-spinner>
+  <!-- <ion-spinner icon="ripple" ng-show="cards.length == 0"></ion-spinner> -->
 </ion-view>
 <!-- ui-sref="app.product-detail({_id: card._id})" -->
