--- a/www/js/front-page/front-page.html
+++ b/www/js/front-page/front-page.html
@@ -6,27 +6,21 @@
   </ion-nav-bar>
   <ion-content>
 
-    <form>
-      <div class="list">
+      <div id="login" class="list list-inset">
 
         <label class="item item-input">
           <span class="input-label">Username</span>
           <input type="text" ng-model="user.username">
         </label>
-
-
         <label class="item item-input">
           <span class="input-label">Password</span>
           <input type="password" ng-model="user.password">
         </label>
-
-
         <label class="item">
           <button class="button button-block button-positive" ng-click="login(user)">Log in</button>
         </label>
         <!-- <button ng-click="loginFacebook()">Facebook Login</button> -->
       </div>
-    </form>
 
     <button class="button button-block button-positive" ng-click="goTo('sign-up')">Sign Up</button>
   </ion-content>
