--- a/www/js/front-page/sign-up.html
+++ b/www/js/front-page/sign-up.html
@@ -11,23 +11,23 @@
 
     <h1>Sign Up</h1>
 
-    <form show-validation novalidate>
+    <div id="sign-up" class="list list-inset">
       <label class="item item-input">
-        <span class="input-label">Username<span>
+        <span class="input-label">Username: <span>
         <input type="text" ng-model="newUser.username" required>
       </label>
       <label class="item item-input">
-        <span class="input-label">Email<span>
-        <input type="text" ng-model="newUser.email" required>
+        <span class="input-label">Email: <span>
+        <input type="email" ng-model="newUser.email" required>
       </label>
       <label class="item item-input">
-        <span class="input-label">Password<span>
-        <input type="text" ng-model="newUser.password" required>
+        <span class="input-label">Password: <span>
+        <input type="password" ng-model="newUser.password" required>
       </label>
       <label class="item">
         <button class="button button-block button-positive" ng-click="signUp(newUser)">Sign Up</button>
       </label>
-    </form>
+    </div>
     <button ng-click="goTo('front-page')">Login</button>
 
   </ion-content>
