--- a/www/js/front-page/front-page.html
+++ b/www/js/front-page/front-page.html
@@ -1,8 +1,8 @@
-<ion-nav-view>
+<ion-view view-title="Free Swap">
   <ion-header-bar>
     <h1 class="title">Sign-In</h1>
   </ion-header-bar>
-  <ion-nav-bar class="bar-positive">
+  <ion-nav-bar class="bar-dark">
   </ion-nav-bar>
   <ion-content>
 
@@ -18,10 +18,11 @@
         </label>
         <label class="item">
           <button class="button button-block button-positive" ng-click="login(user)">Log in</button>
+          <button class="button button-block button-positive" ng-click="loginPlatform('facebook')">Facebook</button>
         </label>
         <!-- <button ng-click="loginFacebook()">Facebook Login</button> -->
       </div>
 
     <button class="button button-block button-positive" ng-click="goTo('sign-up')">Sign Up</button>
   </ion-content>
-</ion-nav-view>
+</ion-view>
