--- a/platforms/android/assets/www/js/matches/matchforseller.html
+++ b/platforms/android/assets/www/js/matches/matchforseller.html
@@ -11,32 +11,30 @@
     </style>
   </ion-header-bar>
   <ion-content>
-    <div class="bar bar-header" >
-        <div class="tabs">
-          <a class="tab-item" ui-sref="app.matches">
-              As a buyer
-            </a>
-          <a class="tab-item" ui-sref="app.matchforseller">
-              As a seller
-            </a>
-        </div>
-    </div>
-    <br>
-    <br>
     <div class="list">
       <ion-item ng-repeat="item in matches" class="item-thumbnail-left" ng-class="{
           red: item.product.swappedWith !== 'null', green: item.product.swappedWith === userInfo._id
         }" ng-click="goToChat(item)">
         <img src="{{item.product.photoUrls}}">
-        <h2>{{item.product.title}}</h2><i class="icon ion-chatbubbles item-icon-right" ng-click="goToChat(item)" style="font-size:40px; float: right">  Chat</i>
-
-        <!-- <p>{{item.product.location}}</p> -->
+        <h2>{{item.product.title}}</h2>
+        <p>{{item.product.location}}</p>
         <p> Liked By {{item.seller.username}}</p>
-<!--         <button class="More" ng-model="item.product._id" ng-click="detail(item.product._id)">More Info</button>
+        <button class="More" ng-model="item.product._id" ng-click="detail(item.product._id)">More Info</button>
         <button class="delete" ng-model="item.buyer._id" ng-click="delete(item.product._id, item.buyer._id)">Delete</button>
+        <!--      // for sellers page only -->
         <button class="traded" ng-click="traded(item.product._id, item.buyer._id)">Traded</button>
- -->      </ion-item>
+      </ion-item>
     </div>
-
+    <br>
+    <br>
+    <br>
+    <div class="tabs">
+      <a class="tab-item" ui-sref="app.matches">
+          As a buyer
+        </a>
+      <a class="tab-item" ui-sref="app.matchforseller">
+          As a seller
+        </a>
+    </div>
   </ion-content>
 </ion-view>
