--- a/www/js/front-page/front-page.html
+++ b/www/js/front-page/front-page.html
@@ -2,7 +2,7 @@
   <ion-header-bar>
     <h1 class="title">Sign-In</h1>
   </ion-header-bar>
-  <ion-nav-bar class="bar-positive">
+  <ion-nav-bar class="bar-dark">
   </ion-nav-bar>
   <ion-content>
 
@@ -17,11 +17,11 @@
           <input type="password" ng-model="user.password">
         </label>
         <label class="item">
-          <button class="button button-block button-positive" ng-click="login(user)">Log in</button>
+          <button class="button button-block button-calm" ng-click="login(user)">Log in</button>
         </label>
         <!-- <button ng-click="loginFacebook()">Facebook Login</button> -->
       </div>
 
-    <button class="button button-block button-positive" ng-click="goTo('sign-up')">Sign Up</button>
+    <button class="button button-block button-calm" ng-click="goTo('sign-up')">Sign Up</button>
   </ion-content>
 </ion-nav-view>
