--- a/www/js/matches/matches.html
+++ b/www/js/matches/matches.html
@@ -12,7 +12,7 @@
       </ion-header-bar>
   <ion-content>
     <div class="list">
-      <div class="tabs">
+      <div class="tabs bar bar-header">
         <a class="tab-item" ui-sref="app.matches">
           As a buyer
         </a>
@@ -22,26 +22,13 @@
       </div>
       <br>
       <br>
-      <h2>Craigslist Data</h2>
-      <ion-list>
-        <ion-item ng-repeat="cgItem in craigslistMatches" class="item-thumbnail-left" ng-class="{
-          red: cgItem.product.swappedWith !== 'null', green: cgItem.product.swappedWith === userInfo._id
-        }">
-          <img src="{{cgItem.product.photoUrls}}">
-          <h2>{{cgItem.product.title}}</h2>
-          <p>{{cgItem.product.location}}</p>
-          <p style="cursor: pointer" ng-click="goToUrl(cgItem.productUrl)">Ext. Link: {{cgItem.productUrl}}</p>
-          <button class="More" ng-model="cgItem.product._id" ng-click="detail(cgItem.product._id)">More Info</button>
-          <ion-reorder-button class="ion-navicon"></ion-reorder-button>
-        </ion-item>
-      </ion-list>
-      <h2>App Data</h2>
+      <h2>Free Swap</h2>
       <ion-item ng-repeat="appItem in appMatches" class="item-thumbnail-left" ng-class="{
           red: appItem.product.swappedWith !== 'null', green: appItem.product.swappedWith === userInfo._id
-        }" ng-click="goToChat(appItem)">
+        }" >
         <img src="{{appItem.product.photoUrls}}">
-        <h2>{{appItem.product.title}}</h2>
-        <p>{{appItem.product.location}}</p>
+        <h2>{{appItem.product.title}}</h2><i class="icon ion-chatbubbles item-icon-right" ng-click="goToChat(appItem)" style="font-size:40px; float: right">  Chat</i>
+        <!-- <p>{{appItem.product.location}}</p> -->
         <p> From: {{appItem.seller.username}}</p>
         <button class="More" ng-model="appItem.product._id" ng-click="detail(appItem.product._id)">More Info</button>
         <!--           <ion-item ng-repeat="appItem in matches" class="item-thumbnail-left" ng-class="{
@@ -54,6 +41,19 @@
 
             <button class="More" ng-model="appItem.product._id" ng-click="detail(appItem.product._id)">More Info</button> -->
       </ion-item>
+      <h2>Craigslist</h2>
+      <ion-list>
+        <ion-item ng-repeat="cgItem in craigslistMatches" class="item-thumbnail-left" ng-class="{
+          red: cgItem.product.swappedWith !== 'null', green: cgItem.product.swappedWith === userInfo._id
+        }">
+          <img src="{{cgItem.product.photoUrls}}">
+          <h2>{{cgItem.product.title}}</h2><i class="icon ion-chatbubbles item-icon-right" ng-click="goToChat(appItem)" style="font-size:40px; float: right">  Chat</i>
+          <!-- <p>{{cgItem.product.location}}</p> -->
+          <p style="cursor: pointer" ng-click="goToUrl(cgItem.productUrl)">Ext. Link: {{cgItem.productUrl}}</p>
+          <button class="More" ng-model="cgItem.product._id" ng-click="detail(cgItem.product._id)">More Info</button>
+          <ion-reorder-button class="ion-navicon"></ion-reorder-button>
+        </ion-item>
+      </ion-list>
     </div>
   </ion-content>
 </ion-view>
